# ptp-nanosecond-timestamp-core

./: README.md  pyproject.toml
docs/: operating-boundaries.md  recruiter-brief.md  research-note.md  system-design.md  validation-evidence.md
src/ptp_nanosecond_timestamp_core/: __init__.py  ptp.py
tests/: test_ptp.py
