[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ptp-nanosecond-timestamp-core"
version = "0.1.0"
description = "PTP-style nanosecond offset and path-delay calculations for hardware timestamping."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Ephraim Shaw" }]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
